fix: hide overflow in links

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,7 @@ p {
     margin-top: 16px;
     border: 1px solid transparent;
     border-radius: 16px;
+    overflow: hidden;
 }
 
 #links .link a {
